--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "crypto-js": "^4.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
